# XtraScript

./: CMakeLists.txt  build.sh  readme.md  test.cpp  test.js
Frame/: README.md  bun.lockb  index.ts  package.json
Frame-Three/: README.md  bun.lockb  index.ts  package.json  tsconfig.json
Frame-Three/src/: expression.ts  main.ts  types.ts  utils.ts
Frame-Three/src/core/: dependency-injection.ts  element.ts  expression.ts  index.ts  router.ts  state.ts  types.ts
Frame-Three/src/decorators/: capsule.decorator.ts  emit-decorator.ts  frame-decorator.ts  index.ts  injectable-decorator.ts  prop-decorator.ts
Frame-Two/: README.md  index.ts  package.json  tsconfig.json
Frame-Two/src/: index.ts
Frame/parserBuild/: index.js  styles.css
Frame/src/: index.ts  notes.txt
Frame/src/core/: createElement.ts  (+6 more)
libs/: logger.hpp
libs/builder/: arena.hpp  builder.hpp  file_reader.hpp  generation.hpp
libs/testing/: test_mounting.hpp  test_types.hpp
src/: file_reader.hpp  generation.hpp  main.cpp  nodes.hpp  parser.hpp  tokenization.hpp
src/harnesses/: build_harness.hpp  capsule_harness.hpp  frame_harness.hpp  generate_harness.hpp  harness_commands.hpp  help_harness.hpp  injectable_harness.hpp  project_harness.hpp  serve_harness.hpp
src/javascript-playground/: index.ts  state.ts
src/parser/: checkers.hpp  nodes.hpp  parent_parser.hpp  parse_builtin.hpp  parse_expression.hpp  parse_file.hpp  parse_function_arguments.hpp  parse_function_end.hpp  parse_function_execution.hpp  parse_program.hpp  parse_return.hpp  parse_return_type.hpp  parse_statement.hpp  parse_statement_definition.hpp  parse_take.hpp  parse_term.hpp  parse_variable.hpp
src/tokenize/: html_tokenization.hpp  shared.hpp  tokenization.hpp
src/xtrascript/: another.xs  builtin_requirements.xs  index.html  main.xs  styles.css  web_requirements.xs
xtrascript/: entry.xs  main.xs
(+104 files in other folders)
